--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
 group = 'com.svj'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+bootJar {
+	archiveFileName = "optikart.jar"
+}
 
 configurations {
 	compileOnly {
