--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
+
+paypal.mode=sandbox
+paypal.client.id=ASjE5xhGlEUTVnnhK_WToLYzJ0Fwi7MEJG-xeqsqOL6mSHSAk2Kyi4UotsjjY187SblxBkB0DqeH1TVc
+paypal.client.secret=EIHpJ20tasVvHHX2PVWqgkSnfvkwHJ_hfy-t3YllYWUFMTsRnoXPv9B-PdiNobxUTb50vPtvFqMpKsQD
+server.port=8080
